# manrope

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: lib.yml
bdfs/: manrope-bold-10.bdf  manrope-bold-11.bdf  manrope-bold-12.bdf  manrope-bold-13.bdf  manrope-bold-14.bdf  manrope-bold-15.bdf  manrope-bold-16.bdf  manrope-bold-17.bdf  manrope-bold-18.bdf  manrope-bold-19.bdf  manrope-bold-20.bdf  manrope-bold-21.bdf  manrope-bold-22.bdf  manrope-bold-23.bdf  manrope-bold-24.bdf  manrope-bold-25.bdf  manrope-bold-26.bdf  manrope-bold-27.bdf  manrope-bold-28.bdf  manrope-bold-29.bdf  manrope-bold-30.bdf  manrope-bold-31.bdf  manrope-bold-32.bdf  manrope-bold-33.bdf  manrope-bold-34.bdf  manrope-bold-35.bdf  manrope-bold-36.bdf  manrope-bold-37.bdf  manrope-bold-38.bdf  manrope-bold-39.bdf  manrope-bold-40.bdf  manrope-bold-41.bdf  manrope-bold-42.bdf  manrope-bold-43.bdf  manrope-bold-44.bdf  manrope-bold-45.bdf  manrope-bold-46.bdf  manrope-bold-47.bdf  manrope-bold-48.bdf  manrope-bold-49.bdf  (+485 more)
manrope_macros/: .gitignore  Cargo.toml
manrope_macros/src/: lib.rs
src/: lib.rs
